--- a/lexiflux/templates/book.html
+++ b/lexiflux/templates/book.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
     {% include "page.html" %}
+    <script src="{% static 'lexiflux/bundle.js' %}"></script>
 {% endblock %}
