--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -2,25 +2,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <!-- Hamburger Button -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Navbar content -->
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            &#9776; <!-- Hamburger Icon -->
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                            <!-- Add more dropdown items here if needed -->
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            {% include 'hamburger.html' with current_page='reader' %}
 
             <div class="mx-3 text-truncate title-container">
                 {{ book.title }}
