--- a/lexiflux/templates/profile.html
+++ b/lexiflux/templates/profile.html
@@ -1,21 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h2 class="card-title text-center">User Profile</h2>
-                    <div class="mb-3">
-                        <label class="form-label"><strong>Email:</strong></label>
-                        <p class="form-control-plaintext">{{ user.email }}</p>
+<div class="d-flex flex-column vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            {% include 'hamburger.html' with current_page='profile' %}
+
+            <div class="mx-3 text-truncate title-container">
+                {{ book.title }}
+            </div>
+        </div>
+    </nav>
+
+    <div class="container mt-12">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h2 class="card-title text-center">User Profile</h2>
+                        <div class="mb-3">
+                            <label class="form-label"><strong>Email:</strong></label>
+                            <p class="form-control-plaintext">{{ user.email }}</p>
+                        </div>
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger w-100">Logout</button>
+                        </form>
                     </div>
-                    <!-- Logout Form -->
-                    <form action="{% url 'logout' %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger w-100">Logout</button>
-                    </form>
                 </div>
             </div>
         </div>
