--- a/lexiflux/templates/library.html
+++ b/lexiflux/templates/library.html
@@ -21,14 +21,34 @@
                     <button class="btn btn-primary" id="import-button">Import Books</button>
                 </div>
                 <div class="list-group">
-                    {% for book in books %}
-                        <a href="{% url 'book' book.id %}" class="list-group-item list-group-item-action">
-                            {{ book.title }} by {{ book.author.name }}
-                        </a>
+                       {% for book in books %}
+                            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                                <a href="{% url 'reader' %}?book-id={{ book.id }}">{{ book.title }} by {{ book.author.name }}</a>
+                                <button onclick="location.href='{% url 'book' %}?book-id={{ book.id }}'" class="btn btn-secondary">
+                                    <i class="bi bi-gear-fill"></i>
+                                </button>
+                            </div>
                     {% empty %}
                         <p>No books available.</p>
                     {% endfor %}
                 </div>
+                <nav aria-label="Page navigation" class="mt-4">
+                    <ul class="pagination justify-content-center">
+                        {% if books.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page={{ books.previous_page_number }}">Previous</a></li>
+                        {% endif %}
+                        {% for num in books.paginator.page_range %}
+                            {% if books.number == num %}
+                                <li class="page-item active"><a class="page-link" href="#">{{ num }}</a></li>
+                            {% else %}
+                                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if books.has_next %}
+                            <li class="page-item"><a class="page-link" href="?page={{ books.next_page_number }}">Next</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
             </div>
         </div>
         </div>
